# uwv

./: .gitignore  LICENSE  Makefile  README.md  Test_file.ipynb  pyproject.toml  requirements.txt  test1.ipynb
docs/: mkdocs.yml
notebooks/: 1) table_selection.ipynb  1_2022_UWV_Sarimax_Q_Health_No-EXO.ipynb  2) alternative_data_sources.ipynb  2) tables_to_dataframe.ipynb  2022_2023_UWV_Sarimax_C_Industrie.ipynb  2022_2023_UWV_Sarimax_G_Trade.ipynb  2022_2023_UWV_Sarimax_Q_Healthcare.ipynb  2022_UWV_Sarimax_C_Industrie.ipynb  2022_UWV_Sarimax_G_Trade.ipynb  3) EDA.ipynb  3_2022_2023_UWV_Sarimax_G_Trade.ipynb  3_2022_2023_UWV_Sarimax_Q_Healthcare.ipynb  3_22_23_24UWV_Sarimax_G_Trade.ipynb  4) training.ipynb  ADF_Test_CH.ipynb  C_manu_updated_block_10.py  Correlation_merged_tables.ipynb  Correlation_with_sickleave.ipynb  Data_Vis_83056NED.ipynb  Data_Vis_CBS_CH.ipynb  Data_Vis_CH.ipynb  Data_understanding_Marieke.ipynb  Deep_learning_CH.ipynb  Diverging_MAE_Comparison_2022.html  Diverging_MAE_Comparison_2023.html  EWMA_Time_Series_CH.ipynb  Exponential Smoothing model_CH.ipynb  Final_2022_2023_UWV_Sarimax_Q_Healthcare.ipynb  Final_22_23_24UWV_Sarimax_G_Trade.ipynb  Final_22_23_24_UWV_Sarimax_C_Manufacturing.ipynb  Final_22_23_24_UWV_Sarimax_C_Manufacturing2.ipynb  Final_22_23_24_UWV_Sarimax_C_Manufacturing_.ipynb  Final_22_23_24_UWV_Sarimax_G_Trade.ipynb  Final_22_23_24_UWV_Sarimax_Q_Healthcare.ipynb  Find_Best_Sarimax_model_CH.ipynb  Find_Best_Sarimax_model_C__OPT20241110_CH_Exo_Q1.ipynb  Find_Best_Sarimax_model_Q_CH.ipynb  Find_Best_Sarimax_model_Q_CH_2.ipynb  (+60 more)
(+53 files in other folders)
